# gesture-ar-research

./: .gitattributes  .gitignore  PROJECT_OVERVIEW.md  README.md  RUN.bat  START_HERE.md  START_PROJECT.bat  STOP.bat  deep-research-report.md  pyproject.toml
.claude/: launch.json
artifacts/models/: ipn_c1t_tcn_augmented.pkl  ipn_c1t_tcn_augmented_mv.pkl  ipn_c1t_tcn_full_validated.pkl  ipn_c1t_tcn_full_validated_mv.pkl  rear_c1t_tcn_mv.pkl
configs/datasets/: ipn_hand.yaml
configs/demo/: prerecorded.yaml  (+1 more)
demo/: __init__.py
docs/: TZ_windows_first_ru.md  ar_interface_user_guide.md  benchmark_design.md  c3_hybrid_research.md  c4_action_safe_research.md  c6_recognition_upgrade.md  capture_protocol.md  chatgpt_project_context_ru.md  evaluation_protocol.md  final_research_claim.md  gesture_contract.md  handoff_mobile.md  live_gesture_diagnosis.md  live_interface_refinement_report.md  live_model_assessment.md  macos_m1_setup.md  mobile_app_handoff.md  phone_ar_transfer.md  phone_rear_gesture_resolution.md  project_research_assessment.md  rear_training_runbook.md  research_direction_oodmvmt_alignment.md  setup_training_summary.md  system_ui_plan.md
requirements/: live.txt  macos-arm64.txt  windows-train.txt
research_pipeline/: __init__.py  labels.py
scripts/: diagnose_live_video.py  start_ar_demo.ps1  start_ar_demo.sh  stop_ar_demo.sh
session_gesture_guide/: README.txt  index.html
tools/: build_concise_project_report_en_docx.py  build_current_project_report_en_docx.py  build_project_state_report_en_docx.py  build_thesis_report_docx.py  validate_manifest.py
(+242 files in other folders)
